# learn_ai

./: .gitignore  LICENSE  README.md  nixpacks.toml  pyproject.toml  railway.toml
00_AIM_Quicklinks/: README.md
00_OpenAI API Key Setup/: README.md
00_Setting Up Git/: README.md
01_Prototyping Best Practices & Vibe Check/: README.md  vercel.json
02_Embeddings_and_RAG/: Embedding_Primer.ipynb  Pythonic_RAG_Assignment.ipynb  README.md
03_End-to-End_RAG/: README.md  excel_rag_implementation.py  package.json  pdf_rag_implementation.py  start.sh  vercel.json
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  Ollama_Setup_and_Testing.ipynb  README.md  pyproject.toml  rag_system.py  requirements_rag.txt
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  README.md  pyproject.toml
06_Multi_Agent_with_LangGraph/: Multi_Agent_RAG_LangGraph.ipynb  Multi_Agent_RAG_LangGraph_Assignment.ipynb  Online_PDF_RAG_System.ipynb  README.md  multi_agent_rag_langgraph.py  pyproject.toml
07_Synthetic_Data_Generation_and_LangSmith/: README.md  Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  pyproject.toml
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb  README.md  pyproject.toml
09_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  Advanced_Retrieval_with_LangChain_Assignment_1.ipynb  README.md  golden_dataset_retriever_eval.csv  pyproject.toml  retriever_evaluation_results.csv
10_Open_DeepResearch/: README.md  open-deep-research.ipynb  pyproject.toml
12_OpenAI_Agents_SDK/: OpenAI_Agents_SDK.ipynb  README.md
13_MCP/: OpenAI_Responses_API_Data_and_Connectors.ipynb  OpenAI_Responses_API_Data_and_Connectors_1.ipynb  README.md  pyproject.toml
14_LangGraph_Platform/: .env.example  README.md  langgraph.json  pyproject.toml  test_served_graph.py
14_LangGraph_Platform/app/: README.md  models.py  rag.py  state.py  tools.py
14_LangGraph_Platform/app/graphs/: agent_with_helpfulness.py  simple_agent.py
14_LangGraph_Platform/data/: AIE8_Projects_with_Domains.csv
16_Production_RAG_and_Guardrails/: Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment.ipynb  Prototyping_LangChain_Application_with_Production_Minded_Changes_Assignment_1.ipynb
Certification/: .railwayignore  .vercelignore  Assignment.md  Dockerfile  GMAIL_INTEGRATION_GUIDE.md  README.md  (+6 more)
(+232 files in other folders)
